Data preparation, model selection and preparation of development space for model finetuning

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2467,7 +2467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"query_question_sql_copilot.csv\",sep=\";\",index=False)"
+    "df.to_csv(\"./data/query_question_sql_copilot.csv\",sep=\";\",index=False)"
    ]
   },
   {
